10/9/18 v34 - Experimental support for simulating the impact of rivers on effort distribution. \n
9/4/18 v33a & b - Redesigned and added more graphs as well as moved the other info table. \n
8/20/18 v32 - Start/stop for all animations and layer information panel. \n
8/19/18 v31 - Image generation is now multithreaded. \n
8/9/18/ v30b - Many layor bugfixes and fully working exploitation index. \n
8/7/18/ v30 - Rewrote map layers interface to allow for mixing and matching display options. \n
8/2/18 v29 - Mostly complete service worker backend. Site now requires https. \n
7/5/18 v28 - New stats features for spatial distribution and offtake. \n
6/28/18 v27 - Additional results, and performance optimization. \n
6/16/18 v26a - Pop mouseover and legacy save updater. \n
6/15/18 v26 - First Version of the stats package is included. \n
6/10/18 v25 - UI cleanup release. Number of interface improvements and bug fixes. \n
3/26/18 v24a & b - Bug fixes and added the option to override the global HPHY value for each population. \n
3/26/18 v24 - Road or Aerial map for placement, 3 color codes, scale bar, decimal carrying capacity, and other bugfixes. \n
2/28/18 v23 - All math for the simulation has been rewritten in an equal area projection. Also adds spatial debuggin features. \n
1/9/18 v22 - Both results pages are cleaned up and the only unfinished section is the Surrounding Area Depletion chart. \n
1/6/18 v21c - Additional bugfixes for the import system. \n
1/4/18 v21b - More minor bugfixes to the import system. \n
1/3/18 v21a - Bug fixes for the different population import systems. \n
12/29/17 v21 - Finished adding the population import system and changed the interface for app updates. \n
12/26/17 v20 - Adds a new population type: yearly defined populations. Many change to the backend of how popualtions are stored and additional error handling for population input and validation. \n
12/19/17 v19b - More bug fixes and changed persist save copy behavior to be more intuitive. \n