@@ -123,8 +123,8 @@
                                         <div class="row">
                                                 <div class="col s6"><h4>Simulation Parameters</h4></div>
                                                 <div class="col s3" style="margin-top: 16.5px">
-                                                        <a class="waves-effect waves-light teal         darken-3 btn tooltipped" onclick="promptForDefaults()"
-                                                                data-position="bottom" data-delay="100" data-tooltip="Populates all fields with reasonable values. Overwrites prior settings!">
+                                                        <a class="waves-effect waves-light modal-trigger teal darken-3 btn tooltipped" href="#presetDialog"
+                                                                data-position="bottom" data-delay="100" data-tooltip="Load a default set of values. Overwrites prior settings!">
                                                         Load Preset</a>
                                                 </div>
                                                 <div class="col s3" style="margin-top: 16.5px">
@@ -871,18 +871,18 @@
                                 style="margin-right: 24px;">Cancel</a>
                 </div>
         </div>
-        <div id="presetDialog" class="modal modal-fixed-footer">
+        <div id="presetDialog" class="modal modal-fixed-footer" style="min-width: 780px;">
                 <div class="modal-content">
                         <h4>Parameter Presets</h4>
                         <div class="row"><div class="col s12">
-                                Each preset contains a set of simulation parameters from a research paper. Select a preset for more information including the source paper.
+                                Each preset contains a set of simulation parameters from a research paper. Select a preset for source information.
                         </div></div>
-                        <div style="min-height: 400px; max-height: 600px; height: 100%; overflow: scroll; overflow-y: auto; overflow-x: hidden;">
-                                <ul id="presetsContainer" style="padding: 8px;" class="collapsible popout" data-collapsible="accordion"></ul>
+                        <div style="overflow: scroll; overflow-y: auto; overflow-x: hidden;">
+                                <ul id="presetsContainer" style="padding: 8px;" class="collapsible" data-collapsible="accordion"></ul>
                         </div>
                 </div>
                 <div class="modal-footer">
-                        <a class="waves-effect waves-green btn" style="margin-right: 8px;">Done</a>
+                        <a class="waves-effect waves-green btn modal-action modal-close" style="margin-right: 8px;">Done</a>
                 </div>
         </div>
         <div class="notification scale-transition scale-out" id="notificationContainer">
