@@ -5,7 +5,7 @@
   "background_color": "#ffffff",
   "theme_color": "#f7454c",
   "display": "standalone",
-  "version": "34acaaaaaa",
+  "version": "35",
   "icons": [{
     "src": "images/baseline_layers_black_48.png",
     "sizes": "48x48",
